parser.output
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: START stmtlist END
    2        | error
    3        | START stmtlist error

    4 block: '{' stmtlist '}'
    5      | '{' stmtlist error

    6 stmtlist: /* empty */
    7         | stmt stmtlist

    8 stmt: decl_stmt
    9     | assign_stmt
   10     | ctrl_stmt
   11     | loop_stmt
   12     | block

   13 decl_stmt: decl_type decl_body ';'
   14          | decl_type decl_body error

   15 decl_body: ID
   16          | ID ASSIGN e

   17 decl_type: INT
   18          | BOOL

   19 assign_stmt: ID ASSIGN e ';'
   20            | PRINT e ';'
   21            | ID ASSIGN e error
   22            | PRINT e error

   23 ctrl_stmt: IF cond ctrl_stmt1
   24          | IF error ctrl_stmt1

   25 cond: f rop f
   26     | f error f

   27 rop: GT
   28    | GE
   29    | EQ

   30 ctrl_stmt1: THEN block
   31           | THEN block ELSE block

   32 loop_stmt: DO block WHILE '(' cond ')' ';'
   33          | DO block WHILE '(' cond ')' error
   34          | DO block WHILE '(' cond error ';'

   35 e: e PLUS t
   36  | t
   37  | cond

   38 t: t TIMES f
   39  | f

   40 f: ID
   41  | INT_NUM
   42  | '(' e ')'
   43  | '(' e error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 32 33 34 42 43
')' (41) 32 33 42
';' (59) 13 19 20 32 34
'{' (123) 4 5
'}' (125) 4
error (256) 2 3 5 14 21 22 24 26 33 34 43
START (258) 1 3
END (259) 1
IF (260) 23 24
THEN (261) 30 31
ELSE (262) 31
PLUS (263) 35
TIMES (264) 38
INT (265) 17
BOOL (266) 18
DO (267) 32 33 34
WHILE (268) 32 33 34
PRINT (269) 20 22
GT (270) 27
GE (271) 28
EQ (272) 29
ASSIGN (273) 16 19 21
ID (274) 15 16 19 21 40
INT_NUM (275) 41


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
program (27)
    on left: 1 2 3, on right: 0
block (28)
    on left: 4 5, on right: 12 30 31 32 33 34
stmtlist (29)
    on left: 6 7, on right: 1 3 4 5 7
stmt (30)
    on left: 8 9 10 11 12, on right: 7
decl_stmt (31)
    on left: 13 14, on right: 8
decl_body (32)
    on left: 15 16, on right: 13 14
decl_type (33)
    on left: 17 18, on right: 13 14
assign_stmt (34)
    on left: 19 20 21 22, on right: 9
ctrl_stmt (35)
    on left: 23 24, on right: 10
cond (36)
    on left: 25 26, on right: 23 32 33 34 37
rop (37)
    on left: 27 28 29, on right: 25
ctrl_stmt1 (38)
    on left: 30 31, on right: 23 24
loop_stmt (39)
    on left: 32 33 34, on right: 11
e (40)
    on left: 35 36 37, on right: 16 19 20 21 22 35 42 43
t (41)
    on left: 38 39, on right: 35 36 38
f (42)
    on left: 40 41 42 43, on right: 25 26 38 39


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    START  shift, and go to state 2

    program  go to state 3


State 1

    2 program: error .

    $default  reduce using rule 2 (program)


State 2

    1 program: START . stmtlist END
    3        | START . stmtlist error

    IF     shift, and go to state 4
    INT    shift, and go to state 5
    BOOL   shift, and go to state 6
    DO     shift, and go to state 7
    PRINT  shift, and go to state 8
    ID     shift, and go to state 9
    '{'    shift, and go to state 10

    $default  reduce using rule 6 (stmtlist)

    block        go to state 11
    stmtlist     go to state 12
    stmt         go to state 13
    decl_stmt    go to state 14
    decl_type    go to state 15
    assign_stmt  go to state 16
    ctrl_stmt    go to state 17
    loop_stmt    go to state 18


State 3

    0 $accept: program . $end

    $end  shift, and go to state 19


State 4

   23 ctrl_stmt: IF . cond ctrl_stmt1
   24          | IF . error ctrl_stmt1

    error    shift, and go to state 20
    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 24
    f     go to state 25


State 5

   17 decl_type: INT .

    $default  reduce using rule 17 (decl_type)


State 6

   18 decl_type: BOOL .

    $default  reduce using rule 18 (decl_type)


State 7

   32 loop_stmt: DO . block WHILE '(' cond ')' ';'
   33          | DO . block WHILE '(' cond ')' error
   34          | DO . block WHILE '(' cond error ';'

    '{'  shift, and go to state 10

    block  go to state 26


State 8

   20 assign_stmt: PRINT . e ';'
   22            | PRINT . e error

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 27
    e     go to state 28
    t     go to state 29
    f     go to state 30


State 9

   19 assign_stmt: ID . ASSIGN e ';'
   21            | ID . ASSIGN e error

    ASSIGN  shift, and go to state 31


State 10

    4 block: '{' . stmtlist '}'
    5      | '{' . stmtlist error

    IF     shift, and go to state 4
    INT    shift, and go to state 5
    BOOL   shift, and go to state 6
    DO     shift, and go to state 7
    PRINT  shift, and go to state 8
    ID     shift, and go to state 9
    '{'    shift, and go to state 10

    $default  reduce using rule 6 (stmtlist)

    block        go to state 11
    stmtlist     go to state 32
    stmt         go to state 13
    decl_stmt    go to state 14
    decl_type    go to state 15
    assign_stmt  go to state 16
    ctrl_stmt    go to state 17
    loop_stmt    go to state 18


State 11

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


State 12

    1 program: START stmtlist . END
    3        | START stmtlist . error

    error  shift, and go to state 33
    END    shift, and go to state 34


State 13

    7 stmtlist: stmt . stmtlist

    IF     shift, and go to state 4
    INT    shift, and go to state 5
    BOOL   shift, and go to state 6
    DO     shift, and go to state 7
    PRINT  shift, and go to state 8
    ID     shift, and go to state 9
    '{'    shift, and go to state 10

    $default  reduce using rule 6 (stmtlist)

    block        go to state 11
    stmtlist     go to state 35
    stmt         go to state 13
    decl_stmt    go to state 14
    decl_type    go to state 15
    assign_stmt  go to state 16
    ctrl_stmt    go to state 17
    loop_stmt    go to state 18


State 14

    8 stmt: decl_stmt .

    $default  reduce using rule 8 (stmt)


State 15

   13 decl_stmt: decl_type . decl_body ';'
   14          | decl_type . decl_body error

    ID  shift, and go to state 36

    decl_body  go to state 37


State 16

    9 stmt: assign_stmt .

    $default  reduce using rule 9 (stmt)


State 17

   10 stmt: ctrl_stmt .

    $default  reduce using rule 10 (stmt)


State 18

   11 stmt: loop_stmt .

    $default  reduce using rule 11 (stmt)


State 19

    0 $accept: program $end .

    $default  accept


State 20

   24 ctrl_stmt: IF error . ctrl_stmt1

    THEN  shift, and go to state 38

    ctrl_stmt1  go to state 39


State 21

   40 f: ID .

    $default  reduce using rule 40 (f)


State 22

   41 f: INT_NUM .

    $default  reduce using rule 41 (f)


State 23

   42 f: '(' . e ')'
   43  | '(' . e error

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 27
    e     go to state 40
    t     go to state 29
    f     go to state 30


State 24

   23 ctrl_stmt: IF cond . ctrl_stmt1

    THEN  shift, and go to state 38

    ctrl_stmt1  go to state 41


State 25

   25 cond: f . rop f
   26     | f . error f

    error  shift, and go to state 42
    GT     shift, and go to state 43
    GE     shift, and go to state 44
    EQ     shift, and go to state 45

    rop  go to state 46


State 26

   32 loop_stmt: DO block . WHILE '(' cond ')' ';'
   33          | DO block . WHILE '(' cond ')' error
   34          | DO block . WHILE '(' cond error ';'

    WHILE  shift, and go to state 47


State 27

   37 e: cond .

    $default  reduce using rule 37 (e)


State 28

   20 assign_stmt: PRINT e . ';'
   22            | PRINT e . error
   35 e: e . PLUS t

    error  shift, and go to state 48
    PLUS   shift, and go to state 49
    ';'    shift, and go to state 50


State 29

   36 e: t .
   38 t: t . TIMES f

    TIMES  shift, and go to state 51

    $default  reduce using rule 36 (e)


State 30

   25 cond: f . rop f
   26     | f . error f
   39 t: f .

    error  shift, and go to state 42
    GT     shift, and go to state 43
    GE     shift, and go to state 44
    EQ     shift, and go to state 45

    error  [reduce using rule 39 (t)]
    PLUS   reduce using rule 39 (t)
    TIMES  reduce using rule 39 (t)
    ';'    reduce using rule 39 (t)
    ')'    reduce using rule 39 (t)

    rop  go to state 46


State 31

   19 assign_stmt: ID ASSIGN . e ';'
   21            | ID ASSIGN . e error

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 27
    e     go to state 52
    t     go to state 29
    f     go to state 30


State 32

    4 block: '{' stmtlist . '}'
    5      | '{' stmtlist . error

    error  shift, and go to state 53
    '}'    shift, and go to state 54


State 33

    3 program: START stmtlist error .

    $default  reduce using rule 3 (program)


State 34

    1 program: START stmtlist END .

    $default  reduce using rule 1 (program)


State 35

    7 stmtlist: stmt stmtlist .

    $default  reduce using rule 7 (stmtlist)


State 36

   15 decl_body: ID .
   16          | ID . ASSIGN e

    ASSIGN  shift, and go to state 55

    $default  reduce using rule 15 (decl_body)


State 37

   13 decl_stmt: decl_type decl_body . ';'
   14          | decl_type decl_body . error

    error  shift, and go to state 56
    ';'    shift, and go to state 57


State 38

   30 ctrl_stmt1: THEN . block
   31           | THEN . block ELSE block

    '{'  shift, and go to state 10

    block  go to state 58


State 39

   24 ctrl_stmt: IF error ctrl_stmt1 .

    $default  reduce using rule 24 (ctrl_stmt)


State 40

   35 e: e . PLUS t
   42 f: '(' e . ')'
   43  | '(' e . error

    error  shift, and go to state 59
    PLUS   shift, and go to state 49
    ')'    shift, and go to state 60


State 41

   23 ctrl_stmt: IF cond ctrl_stmt1 .

    $default  reduce using rule 23 (ctrl_stmt)


State 42

   26 cond: f error . f

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    f  go to state 61


State 43

   27 rop: GT .

    $default  reduce using rule 27 (rop)


State 44

   28 rop: GE .

    $default  reduce using rule 28 (rop)


State 45

   29 rop: EQ .

    $default  reduce using rule 29 (rop)


State 46

   25 cond: f rop . f

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    f  go to state 62


State 47

   32 loop_stmt: DO block WHILE . '(' cond ')' ';'
   33          | DO block WHILE . '(' cond ')' error
   34          | DO block WHILE . '(' cond error ';'

    '('  shift, and go to state 63


State 48

   22 assign_stmt: PRINT e error .

    $default  reduce using rule 22 (assign_stmt)


State 49

   35 e: e PLUS . t

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    t  go to state 64
    f  go to state 65


State 50

   20 assign_stmt: PRINT e ';' .

    $default  reduce using rule 20 (assign_stmt)


State 51

   38 t: t TIMES . f

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    f  go to state 66


State 52

   19 assign_stmt: ID ASSIGN e . ';'
   21            | ID ASSIGN e . error
   35 e: e . PLUS t

    error  shift, and go to state 67
    PLUS   shift, and go to state 49
    ';'    shift, and go to state 68


State 53

    5 block: '{' stmtlist error .

    $default  reduce using rule 5 (block)


State 54

    4 block: '{' stmtlist '}' .

    $default  reduce using rule 4 (block)


State 55

   16 decl_body: ID ASSIGN . e

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 27
    e     go to state 69
    t     go to state 29
    f     go to state 30


State 56

   14 decl_stmt: decl_type decl_body error .

    $default  reduce using rule 14 (decl_stmt)


State 57

   13 decl_stmt: decl_type decl_body ';' .

    $default  reduce using rule 13 (decl_stmt)


State 58

   30 ctrl_stmt1: THEN block .
   31           | THEN block . ELSE block

    ELSE  shift, and go to state 70

    $default  reduce using rule 30 (ctrl_stmt1)


State 59

   43 f: '(' e error .

    $default  reduce using rule 43 (f)


State 60

   42 f: '(' e ')' .

    $default  reduce using rule 42 (f)


State 61

   26 cond: f error f .

    $default  reduce using rule 26 (cond)


State 62

   25 cond: f rop f .

    $default  reduce using rule 25 (cond)


State 63

   32 loop_stmt: DO block WHILE '(' . cond ')' ';'
   33          | DO block WHILE '(' . cond ')' error
   34          | DO block WHILE '(' . cond error ';'

    ID       shift, and go to state 21
    INT_NUM  shift, and go to state 22
    '('      shift, and go to state 23

    cond  go to state 71
    f     go to state 25


State 64

   35 e: e PLUS t .
   38 t: t . TIMES f

    TIMES  shift, and go to state 51

    $default  reduce using rule 35 (e)


State 65

   39 t: f .

    $default  reduce using rule 39 (t)


State 66

   38 t: t TIMES f .

    $default  reduce using rule 38 (t)


State 67

   21 assign_stmt: ID ASSIGN e error .

    $default  reduce using rule 21 (assign_stmt)


State 68

   19 assign_stmt: ID ASSIGN e ';' .

    $default  reduce using rule 19 (assign_stmt)


State 69

   16 decl_body: ID ASSIGN e .
   35 e: e . PLUS t

    PLUS  shift, and go to state 49

    $default  reduce using rule 16 (decl_body)


State 70

   31 ctrl_stmt1: THEN block ELSE . block

    '{'  shift, and go to state 10

    block  go to state 72


State 71

   32 loop_stmt: DO block WHILE '(' cond . ')' ';'
   33          | DO block WHILE '(' cond . ')' error
   34          | DO block WHILE '(' cond . error ';'

    error  shift, and go to state 73
    ')'    shift, and go to state 74


State 72

   31 ctrl_stmt1: THEN block ELSE block .

    $default  reduce using rule 31 (ctrl_stmt1)


State 73

   34 loop_stmt: DO block WHILE '(' cond error . ';'

    ';'  shift, and go to state 75


State 74

   32 loop_stmt: DO block WHILE '(' cond ')' . ';'
   33          | DO block WHILE '(' cond ')' . error

    error  shift, and go to state 76
    ';'    shift, and go to state 77


State 75

   34 loop_stmt: DO block WHILE '(' cond error ';' .

    $default  reduce using rule 34 (loop_stmt)


State 76

   33 loop_stmt: DO block WHILE '(' cond ')' error .

    $default  reduce using rule 33 (loop_stmt)


State 77

   32 loop_stmt: DO block WHILE '(' cond ')' ';' .

    $default  reduce using rule 32 (loop_stmt)
